fix: align cards flush with section title and add purple heading color
Remove left/right padding on first/last news cards so they align with
the heading above. Add --heading-color design token using brand purple
for all h1-h6 elements to match the original VAC site.

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -98,7 +98,12 @@
     padding: 0 24px;
   }
 
+  .cards.news > ul > li:first-child {
+    padding-left: 0;
+  }
+
   .cards.news > ul > li:last-child {
     border-right: none;
+    padding-right: 0;
   }
 }
